--- a/index.html
+++ b/index.html
@@ -3,9 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD131</title>
+    <title>WDD 131 - Dynamic Web Fundamentals - Kyle Strasdas</title>
+    <meta name="description" content="The homepage for Kyle Strasdas, created for the WDD 131 - Dynamic Web Fundamentals course.">
+    <meta name="author" content="Kyle Strasdas">
+    <link rel="stylesheet" href="styles/base.css">
+    <script src="scripts/getdates.js" defer></script>
 </head>
 <body>
-    <h1>WDD131</h1>
+    <header>
+        <h1>WDD 131: Dynamic Web Fundamentals - Kyle Strasdas</h1>>
+        <nav>
+            <a href="https://www.linkedin.com/">LinkedIn</a>
+            <a href="https://byupw.instructure.com/">Canvas</a>
+            <a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/2-ne/9?lang=eng&id=p50-51#p51">Scripture</a>
+            <a>Final Project</a>
+        </nav>
+    </header>
+    <main>
+        <section class="card">
+            <h2>Heading</h2>
+            <img src="images/image.webp" alt="Section 1 image">
+            <p>Content</p>
+        </section>
+        <section class="card">
+            <h2>Heading</h2>
+            <img src="images/image.webp" alt="Section 1 image">
+            <p>Content</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; <span id="currentyear"></span> Kyle Strasdas | Oregon | USA</p>
+        <p id="lastModified"></p>
+    </footer>
 </body>
 </html>
