--- a/index.html
+++ b/index.html
@@ -21,12 +21,18 @@
     </header>
     <main>
         <section class="card">
-            <h2>Heading</h2>
+            <h2>About Me</h2>
             <img src="images/image.webp" alt="Section 1 image">
-            <p>Content</p>
+            <p>My name is Kyle. I was born in Utah, but have lived in Oregon since I was 12. Currently I live in Springfield, OR with my lovely wife and we look forward to the completion of the Willamette Valley Temple! Right now I'm working full-time as an administrative assistant at a law firm while pursuing a programming degree through BYU Pathway. I enjoy being outdoors and love to play almost any sport - but at the moment I'd say volleyball is my favorite.</p>
+            <h3>Springfield, OR</h3>
+            <p></p>
+            <figure>
+                <img src="images/image.webp" alt="Oregon State Flag">
+                <figcaption>Official Flag of Oregon</figcaption>
+            </figure>
         </section>
         <section class="card">
-            <h2>Heading</h2>
+            <h2>Web Dev Resources</h2>
             <img src="images/image.webp" alt="Section 1 image">
             <p>Content</p>
         </section>
