Added images and initial CSS

--- a/index.html
+++ b/index.html
@@ -22,19 +22,26 @@
     <main>
         <section class="card">
             <h2>About Me</h2>
-            <img src="images/image.webp" alt="Section 1 image">
-            <p>My name is Kyle. I was born in Utah, but have lived in Oregon since I was 12. Currently I live in Springfield, OR with my lovely wife and we look forward to the completion of the Willamette Valley Temple! Right now I'm working full-time as an administrative assistant at a law firm while pursuing a programming degree through BYU Pathway. I enjoy being outdoors and love to play almost any sport - but at the moment I'd say volleyball is my favorite.</p>
+            <img src="images/kyle_gracie_main.webp" alt="Kyle with his wife, Gracie">
+            <p>My name is Kyle. I was born in Utah, but have lived in Oregon since I was 12. Currently I live in Springfield, OR with my lovely wife and we look forward to the completion of the Willamette Valley Temple! Right now I'm working full-time as an administrative assistant at a law firm while pursuing a programming degree through BYU Pathway. I enjoy being outdoors and love to play almost any sport - but at the moment volleyball is my favorite.</p>
             <h3>Springfield, OR</h3>
             <p></p>
             <figure>
-                <img src="images/image.webp" alt="Oregon State Flag">
-                <figcaption>Official Flag of Oregon</figcaption>
+                <img src="images/oregon_flag.webp" alt="Oregon State Flag">
+                <img src="images/oregon_flag_reverse.webp" alt="Back of Oregon State Flag">
+                <figcaption>Oregon is the only state flag with a different design on the reverse side!</figcaption>
             </figure>
         </section>
         <section class="card">
             <h2>Web Dev Resources</h2>
-            <img src="images/image.webp" alt="Section 1 image">
-            <p>Content</p>
+            <ul>
+                <li><a href="https://byui-cse.github.io/cse-ww-program/resources/frontend-resources.html">Frontend Resources</a></li>
+                <li><a href="https://dev.to/domagojvidovic/all-css-properties-you-need-to-know-to-build-a-website-3dbb">Useful CSS Properties</a></li>
+                <li><a href="https://dev.to/teki_solves_fb72717580279/css-survival-bootcamp-day-1-selector-survival-skills-1007">CSS Survival Bootcamp</a></li>
+                <li><a href="https://dev.to/code_2/css-grid-vs-flexbox-how-to-choose-the-right-tool-for-your-layout-3nl0">CSS Grid and Flexbox</a></li>
+                <li><a href="https://dev.to/tpointtech/javascript-journey-a-beginners-roadmap-to-web-mastery-4glp">JavaScript Roadmap</a></li>
+                <li><a href="https://dev.to/10samarth/javascript-tips-every-beginner-should-know-4f96">JavaScript Tips</a></li>
+            </ul>
         </section>
     </main>
     <footer>
