--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <h1>WDD 131: Dynamic Web Fundamentals - Kyle Strasdas</h1>>
+        <h1>WDD 131: Dynamic Web Fundamentals - Kyle Strasdas</h1>
         <nav>
             <a href="https://www.linkedin.com/">LinkedIn</a>
             <a href="https://byupw.instructure.com/">Canvas</a>
@@ -29,7 +29,7 @@
             <p>My name is Kyle. I was born in Utah, but have lived in Oregon since I was 12. Currently I live in Springfield, OR with my lovely wife and we look forward to the completion of the Willamette Valley Temple! Right now I'm working full-time as an administrative assistant at a law firm while pursuing a programming degree through BYU Pathway. I enjoy being outdoors and love to play almost any sport - but at the moment volleyball is my favorite.</p>
             <h3>Springfield, OR</h3>
             <p></p>
-            <figure>
+            <figure class="state-flag">
                 <img src="images/oregon_flag.webp" alt="Oregon State Flag">
                 <img src="images/oregon_flag_reverse.webp" alt="Back of Oregon State Flag">
                 <figcaption>Oregon is the only state flag with a different design on the reverse side!</figcaption>
