Very basic temples page

--- a/temples.html
+++ b/temples.html
@@ -6,12 +6,15 @@
     <title>WDD131 - Temples - Kyle Strasdas</title>
     <meta name="description" content="Temples page created for the WDD 131 - Dynamic Web Fundamentals course.">
     <meta name="author" content="Kyle Strasdas">
-    <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/temples.css">
+    <link rel="stylesheet" href="styles/temples-large.css">
     <script src="scripts/getdates.js" defer></script>
+    <script src="scripts/temples.js" defer></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Noto+Serif&display=swap">
 </head>
 <body>
     <header>
-        <h1>Temple Album</h1>
+        <p>Temple Album</p>
         <nav>
             <a href="">Home</a>
             <a href="">Old</a>
@@ -23,8 +26,40 @@
     <main>
         <h1>Heading</h1>
         <figure>
-            <img src="images/image.webp" alt="Alt Text">
-            <figcaption>Image caption</figcaption>
+            <img src="images/temple.webp" alt="Portland Oregon Temple">
+            <figcaption>Portland Oregon</figcaption>
+        </figure>
+        <figure>
+            <img src="images/temple.webp" alt="Portland Oregon Temple">
+            <figcaption>Portland Oregon</figcaption>
+        </figure>
+        <figure>
+            <img src="images/temple.webp" alt="Portland Oregon Temple">
+            <figcaption>Portland Oregon</figcaption>
+        </figure>
+        <figure>
+            <img src="images/temple.webp" alt="Portland Oregon Temple">
+            <figcaption>Portland Oregon</figcaption>
+        </figure>
+        <figure>
+            <img src="images/temple.webp" alt="Portland Oregon Temple">
+            <figcaption>Portland Oregon</figcaption>
+        </figure>
+        <figure>
+            <img src="images/temple.webp" alt="Portland Oregon Temple">
+            <figcaption>Portland Oregon</figcaption>
+        </figure>
+        <figure>
+            <img src="images/temple.webp" alt="Portland Oregon Temple">
+            <figcaption>Portland Oregon</figcaption>
+        </figure>
+        <figure>
+            <img src="images/temple.webp" alt="Portland Oregon Temple">
+            <figcaption>Portland Oregon</figcaption>
+        </figure>
+        <figure>
+            <img src="images/temple.webp" alt="Portland Oregon Temple">
+            <figcaption>Portland Oregon</figcaption>
         </figure>
     </main>
     <footer>
