--- a/temples.html
+++ b/temples.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <p>Temple Album</p>
+        <h1>Temple Album</h1>
         <nav>
             <a href="">Home</a>
             <a href="">Old</a>
@@ -24,43 +24,45 @@
         </nav>
     </header>
     <main>
-        <h1>Heading</h1>
-        <figure>
-            <img src="images/temple.webp" alt="Portland Oregon Temple">
-            <figcaption>Portland Oregon</figcaption>
-        </figure>
-        <figure>
-            <img src="images/temple.webp" alt="Portland Oregon Temple">
-            <figcaption>Portland Oregon</figcaption>
-        </figure>
-        <figure>
-            <img src="images/temple.webp" alt="Portland Oregon Temple">
-            <figcaption>Portland Oregon</figcaption>
-        </figure>
-        <figure>
-            <img src="images/temple.webp" alt="Portland Oregon Temple">
-            <figcaption>Portland Oregon</figcaption>
-        </figure>
-        <figure>
-            <img src="images/temple.webp" alt="Portland Oregon Temple">
-            <figcaption>Portland Oregon</figcaption>
-        </figure>
-        <figure>
-            <img src="images/temple.webp" alt="Portland Oregon Temple">
-            <figcaption>Portland Oregon</figcaption>
-        </figure>
-        <figure>
-            <img src="images/temple.webp" alt="Portland Oregon Temple">
-            <figcaption>Portland Oregon</figcaption>
-        </figure>
-        <figure>
-            <img src="images/temple.webp" alt="Portland Oregon Temple">
-            <figcaption>Portland Oregon</figcaption>
-        </figure>
-        <figure>
-            <img src="images/temple.webp" alt="Portland Oregon Temple">
-            <figcaption>Portland Oregon</figcaption>
-        </figure>
+        <h2>Heading</h2>
+        <div class="gallery">
+            <figure>
+                <img src="images/temple.webp" alt="Portland Oregon Temple">
+                <figcaption>Portland Oregon</figcaption>
+            </figure>
+            <figure>
+                <img src="images/temple.webp" alt="Portland Oregon Temple">
+                <figcaption>Portland Oregon</figcaption>
+            </figure>
+            <figure>
+                <img src="images/temple.webp" alt="Portland Oregon Temple">
+                <figcaption>Portland Oregon</figcaption>
+            </figure>
+            <figure>
+                <img src="images/temple.webp" alt="Portland Oregon Temple">
+                <figcaption>Portland Oregon</figcaption>
+            </figure>
+            <figure>
+                <img src="images/temple.webp" alt="Portland Oregon Temple">
+                <figcaption>Portland Oregon</figcaption>
+            </figure>
+            <figure>
+                <img src="images/temple.webp" alt="Portland Oregon Temple">
+                <figcaption>Portland Oregon</figcaption>
+            </figure>
+            <figure>
+                <img src="images/temple.webp" alt="Portland Oregon Temple">
+                <figcaption>Portland Oregon</figcaption>
+            </figure>
+            <figure>
+                <img src="images/temple.webp" alt="Portland Oregon Temple">
+                <figcaption>Portland Oregon</figcaption>
+            </figure>
+            <figure>
+                <img src="images/temple.webp" alt="Portland Oregon Temple">
+                <figcaption>Portland Oregon</figcaption>
+            </figure>
+        </div>
     </main>
     <footer>
         <p>&copy; <span id="currentyear"></span> Kyle Strasdas | Oregon | USA</p>
