--- a/temples.html
+++ b/temples.html
@@ -15,16 +15,19 @@
 <body>
     <header>
         <h1>Temple Album</h1>
+        <a id="menu" href="#"></a>
         <nav>
-            <a href="">Home</a>
-            <a href="">Old</a>
-            <a href="">New</a>
-            <a href="">Large</a>
-            <a href="">Small</a>
+            <ul class="navigation">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Old</a></li>
+                <li><a href="#">New</a></li>
+                <li><a href="#">Large</a></li>
+                <li><a href="#">Small</a></li>
+            </ul>
         </nav>
     </header>
     <main>
-        <h2>Heading</h2>
+        <h2>Gallery</h2>
         <div class="gallery">
             <figure>
                 <img src="images/temple.webp" alt="Portland Oregon Temple">
