Country Page Initial CSS

--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <main>
         <section class="card">
             <h2>About Me</h2>
-            <img src="images/kyle_gracie_main.webp" alt="Kyle with his wife, Gracie">
+            <img src="images/kyle-gracie-main.webp" alt="Kyle with his wife, Gracie">
             <p>My name is Kyle. I was born in Utah, but have lived in Oregon since I was 12. Currently I live in Springfield, OR with my lovely wife and we look forward to the completion of the Willamette Valley Temple! Right now I'm working full-time as an administrative assistant at a law firm while pursuing a programming degree through BYU Pathway. I enjoy being outdoors and love to play almost any sport - but at the moment volleyball is my favorite.</p>
             <h3>Springfield, OR</h3>
             <p></p>
             <figure class="state-flag">
-                <img src="images/oregon_flag.webp" alt="Oregon State Flag">
-                <img src="images/oregon_flag_reverse.webp" alt="Back of Oregon State Flag">
+                <img src="images/oregon-flag.webp" alt="Oregon State Flag">
+                <img src="images/oregon-flag-reverse.webp" alt="Back of Oregon State Flag">
                 <figcaption>Oregon is the only state flag with a different design on the reverse side!</figcaption>
             </figure>
         </section>
