Country page CSS changes and added JavaScript

--- a/place.html
+++ b/place.html
@@ -28,27 +28,26 @@
             <div class="data">
                 <h2>Data</h2>
                 <ul>
-                    <li>Area: 98,466 sq mi</li>
-                    <li>Population: 4,272,371</li>
-                    <li>Capital: Salem</li>
-                    <li>Language: English</li>
-                    <li>Currency: US Dollar</li>
-                    <li>Time Zone: UTC-7</li>
-                    <li>Area Codes: 503/971/541/458</li>
-                    <li>Internet TLD: .us</li>
+                    <li>Area: <span>98,466 sq mi</span></li>
+                    <li>Population: <span>4,272,371</span></li>
+                    <li>Capital: <span>Salem</span></li>
+                    <li>Language: <span>English</span></li>
+                    <li>Currency: <span>US Dollar</span></li>
+                    <li>Time Zone: <span>UTC-7</span></li>
+                    <li>Area Codes: <span>503/971/541/458</span></li>
+                    <li>Internet TLD: <span>.us</span></li>
                 </ul>
             </div>
             <div class="weather">
-                <h2>Weather 🌥️</h2>
-                <h3>Weather</h3>
+                <h2>Weather</h2>
                 <div class="current-conditions">
                     <img src="images/mostly-cloudy.svg" alt="Mostly Cloudy" width="150" height="75">
                 </div>
                 <ul>
-                    <li>Temperature: 64°F</li>
-                    <li>Conditions: Mostly Cloudy</li>
-                    <li>Wind: 3 mph</li>
-                    <li>Wind Chill: n/a</li>
+                    <li>Temperature: <span id="current-temp">___</span></li>
+                    <li>Conditions: <span id="current-condition">___</span></li>
+                    <li>Wind: <span id="wind-speed">___</span></li>
+                    <li>Wind Chill: <span id="wind-chill">___</span></li>
                 </ul>
             </div>
         </div>
