Finalized filtered-temples

--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -28,7 +28,7 @@
     </header>
     <main>
         <h2>Gallery</h2>
-        <div id="temples"></div>
+        <div class="temples"></div>
     </main>
     <footer>
         <p>&copy; <span id="currentyear"></span> Kyle Strasdas | Oregon | USA</p>
