--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="styles/filtered-temples-large.css">
     <script src="scripts/getdates.js" defer></script>
     <script src="scripts/filtered-temples.js" defer></script>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Noto+Serif&display=swap">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Noto+Serif&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
