Tweaked head content to differentiate the filtered-temples page from the temples page

--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD131 - Temples - Kyle Strasdas</title>
-    <meta name="description" content="Temples page created for the WDD 131 - Dynamic Web Fundamentals course.">
+    <title>WDD131 - Temples (filters) - Kyle Strasdas</title>
+    <meta name="description" content="Temples page with filters created for the WDD 131 - Dynamic Web Fundamentals course.">
     <meta name="author" content="Kyle Strasdas">
     <link rel="stylesheet" href="styles/filtered-temples.css">
     <link rel="stylesheet" href="styles/filtered-temples-large.css">
