Updated review assignment

--- a/form.html
+++ b/form.html
@@ -38,7 +38,7 @@
                 <label><input id="performance" type="checkbox" name="features">Performance</label>
                 <label><input id="design" type="checkbox" name="features">Design</label>
 
-                <label>Written Review<input id="review" type="textarea" name="written-review"></label></div>
+                <label>Written Review<textarea id="review" name="written-review"></textarea></label>
 
                 <label>Your Name<input id="name" type="text" name="your-name"></label>
             </fieldset>
