--- a/review.html
+++ b/review.html
@@ -8,7 +8,7 @@
     <meta name="author" content="Kyle Strasdas">
     <link rel="stylesheet" href="styles/review-form.css">
     <script src="scripts/getdates.js" defer></script>
-    <script src="scripts/form.js" defer></script>
+    <script src="scripts/review.js" defer></script>
 </head>
 <body>
     <header>
