--- a/review.html
+++ b/review.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="styles/review-form.css">
     <script src="scripts/getdates.js" defer></script>
     <script src="scripts/review.js" defer></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
