--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -47,9 +47,9 @@
         <section>
             <h2>Wireframes</h2>
             <h3>Desktop</h3>
-            <img src="wireframe_desktop.png" alt="Desktop wireframe for Crystal Clear Detail website.">
+            <img src="images/wireframe_desktop.png" alt="Desktop wireframe for Crystal Clear Detail website.">
             <h3>Mobile</h3>
-            <img src="wireframe_mobile.png" alt="Mobile wireframe for Crystal Clear Detail website.">
+            <img src="images/wireframe_mobile.png" alt="Mobile wireframe for Crystal Clear Detail website.">
         </section>
     </main>
     <footer>
