--- a/project/services.html
+++ b/project/services.html
@@ -19,7 +19,7 @@
         <div class="header-container">
             <div class="logo">
                 <a href="index.html">
-                    <img loading="lazy" src="images/logo-alpha.png" alt="Crystal Clear Detail Logo">
+                    <img loading="lazy" src="images/logo.png" alt="Crystal Clear Detail Logo">
                 </a>
             </div>
             <nav class="main-nav">
@@ -32,21 +32,53 @@
             <div class="call-to-action">
                 <a class="book-now" href="contact.html">Book Now!</a>
             </div>
+            <button class="hamburger">
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+            </button>
         </div>
     </header>
     <main>
-        
+        <section class="services">
+            <h1>Our Services</h1>
+            <div class="services-container">
+                <div class="service">
+                <img src="images/foaming.webp" alt="Exterior Detail, woman foaming car" loading="lazy">
+                <h2>Exterior Detail</h2>
+                <p class="price">Starting at $150</p>
+                <p class="description">Bring back the shine to your vehicle’s exterior with our comprehensive wash, wax, and polish service. We remove dirt, grime, and minor imperfections to leave your ride gleaming.</p>
+                </div>
+
+                <div class="service">
+                <img src="images/interior.webp" alt="Man detailing steering wheel, interior of car" loading="lazy">
+                <h2>Interior Detail</h2>
+                <p class="price">Starting at $120</p>
+                <p class="description">We meticulously clean and sanitize every inch of your vehicle’s interior—from upholstery to dashboard—ensuring a spotless, fresh, and inviting cabin.</p>
+                </div>
+
+                <div class="service">
+                <img src="images/polishing.webp" alt="Paint Correction, man polishing car" loading="lazy">
+                <h2>Paint Correction</h2>
+                <p class="price">Starting at $250</p>
+                <p class="description">Remove imperfections, swirl marks, and minor blemishes with our advanced paint correction and polishing service, leaving your car’s paint flawless.</p>
+                </div>
+
+                <div class="service">
+                <img src="images/engine.webp" alt="Clean engine bay" loading="lazy">
+                <h2>Engine Bay Detail</h2>
+                <p class="price">Starting at $75</p>
+                <p class="description">Keep your engine bay pristine with our specialized cleaning process. A clean engine bay not only looks good but also promotes better performance.</p>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="footer-container">
             <div class="footer-logo">
                 <a href="index.html">
-                    <img loading="lazy" src="images/logo-alpha.png" alt="Crystal Clear Detail Logo">
+                    <img loading="lazy" src="images/logo.png" alt="Crystal Clear Detail Logo">
                 </a>
-            </div>
-            <div class="footer-info">
-                <p>&copy; <span id="currentyear"></span> Kyle Strasdas | Oregon | USA</p>
-                <p id="lastModified"></p>
             </div>
             <div class="footer-social">
                 <a href="https://instagram.com/" target="_blank">
@@ -56,9 +88,14 @@
                     <img loading="lazy" src="images/socials-facebook.png" alt="Facebook Logo">
                 </a>
                 <a href="https://twitter.com/" target="_blank">
-                    <img loading="lazy" src="images/socials-x.png" alt="X Logo">
+                    <img loading="lazy" src="images/socials-x-white.png" alt="X Logo">
                 </a>
             </div>
+        </div>
+        <div class="footer-info">
+                <p>&copy; <span id="currentyear"></span> Kyle Strasdas | Oregon | USA</p>
+                <p id="lastModified"></p>
+                <a href="references.html">***References***</a>
         </div>
     </footer>
 </body>
