--- a/project/thank-you.html
+++ b/project/thank-you.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Crystal Clear Detail | Auto Detailing | Contact Us</title>
-    <meta name="description" content="Crystal Clear Detail - Where Every Detail Dazzles - THE auto detail experts in western Oregon - Contact us for more information | Final project for the WDD 131 - Dynamic Web Fundamentals course.">
+    <title>Crystal Clear Detail | Auto Detailing | Thank you!</title>
+    <meta name="description" content="Crystal Clear Detail - Where Every Detail Dazzles - THE auto detail experts in western Oregon - Thank you for contacting us! | Final project for the WDD 131 - Dynamic Web Fundamentals course.">
     <meta name="author" content="Kyle Strasdas">
     <link rel="stylesheet" href="styles/crystal-clear.css">
     <link rel="stylesheet" href="styles/crystal-clear-large.css">
@@ -43,54 +43,11 @@
         <section class="hero-contact">
             <img loading="lazy" src="images/wheels.webp" alt="Clean wheels" class="hero-contact-image">
             <div class="hero-contact-content">
-                <h1>Book Your Appointment</h1>
-                
-                <form method="get" action="thank-you.html" class="contact-form">
-                    <div class="form-group">
-                    <label for="name">Name:</label>
-                    <input type="text" id="name" name="name" placeholder="Your full name" required>
-                    </div>
-
-                    <div class="form-group">
-                    <label for="vehicle">Year/Make/Model:</label>
-                    <input type="text" id="vehicle" name="vehicle" placeholder="e.g., 2015 Honda Accord" required>
-                    </div>
-
-                    <div class="form-group">
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" placeholder="your.email@example.com" required>
-                    </div>
-
-                    <div class="form-group">
-                    <label for="phone">Phone Number:</label>
-                    <input type="tel" id="phone" name="phone" placeholder="(555) 123-4567" required>
-                    </div>
-
-                    <fieldset class="services-check">
-                    <legend>Interested In:</legend>
-                    <div>
-                        <label><input type="checkbox" id="exterior" name="services[]" value="Exterior Detail">Exterior Detail</label>
-                    </div>
-                    <div>
-                        <label><input type="checkbox" id="interior" name="services[]" value="Interior Detail">Interior Detail</label>
-                    </div>
-                    <div>
-                        <label><input type="checkbox" id="paint" name="services[]" value="Paint Correction/Polish">Paint Correction/Polish</label>
-                    </div>
-                    <div>
-                        <label><input type="checkbox" id="engine" name="services[]" value="Engine Bay Detail">Engine Bay Detail</label>
-                    </div>
-                    </fieldset>
-
-                    <div class="form-group">
-                    <label for="comments">Additional Notes/Comments:</label>
-                    <textarea id="comments" name="comments" rows="4" placeholder="Enter any other details, questions, or comments here."></textarea>
-                    </div>
-
-                    <div class="form-group">
-                    <button type="submit" class="btn submit-btn">Experience the difference!</button>
-                    </div>
-                </form>
+                <h1>Thank you for reaching out!</h1>
+                <p>We appreciate your interest in Crystal Clear Detail! Your request has been received, and a member of our team be in touch soon.</p>
+                <div class="hero-buttons">
+                    <a href="contact.html" class="btn book-now">Return to Home</a>
+                </div>
             </div>
         </section>
     </main>
