Adjustments to final project

--- a/project/contact.html
+++ b/project/contact.html
@@ -41,7 +41,7 @@
     </header>
     <main>
         <section class="hero-contact">
-            <img loading="lazy" src="images/wheels.webp" alt="Clean wheels" class="hero-contact-image">
+            <img src="images/wheels.webp" alt="Clean wheels" class="hero-contact-image">
             <div class="hero-contact-content">
                 <h1>Book Your Appointment</h1>
                 
