--- a/project/index.html
+++ b/project/index.html
@@ -43,7 +43,7 @@
         <section class="hero">
             <picture>
                 <source srcset="images/hero-2.webp" media="(min-width: 768px)">
-                <img loading="lazy" src="images/hero-1.webp" alt="High quality auto detailing hero shot" class="hero-image">
+                <img src="images/hero-1.webp" alt="High quality auto detailing hero shot" class="hero-image">
             </picture>
             <div class="hero-content">
                 <h1>Experience Superior Detailing</h1>
