--- a/project/thank-you.html
+++ b/project/thank-you.html
@@ -41,7 +41,7 @@
     </header>
     <main>
         <section class="hero-contact">
-            <img loading="lazy" src="images/wheels.webp" alt="Clean wheels" class="hero-contact-image">
+            <img src="images/wheels.webp" alt="Clean wheels" class="hero-contact-image">
             <div class="hero-contact-content">
                 <h1>Thank you for reaching out!</h1>
                 <p>We appreciate your interest in Crystal Clear Detail! Your request has been received, and a member of our team be in touch soon.</p>
