Corrected all pages to reference new logo.webp instead of logo.png

--- a/project/references.html
+++ b/project/references.html
@@ -19,7 +19,7 @@
         <div class="header-container">
             <div class="logo">
                 <a href="index.html">
-                    <img loading="lazy" src="images/logo.png" alt="Crystal Clear Detail Logo">
+                    <img loading="lazy" src="images/logo.webp" alt="Crystal Clear Detail Logo">
                 </a>
             </div>
             <nav class="main-nav">
@@ -58,6 +58,7 @@
                         <li>hero-1.webp: <a href="https://www.pexels.com/photo/chrome-bmw-grille-113176/">Pexels</a></li>
                         <li>hero-2.webp: <a href="https://www.pexels.com/photo/blue-car-reflecting-autumn-scenery-in-parking-lot-29239619/">Pexels</a></li>
                         <li>interior.webp: <a href="https://www.pexels.com/photo/a-man-in-a-black-sweater-wiping-the-steering-wheel-of-a-car-6873015/">Pexels</a></li>
+                        <li>interior.webp: Generated with Microsoft Copilot</li>
                         <li>mercedes.webp: <a href="https://pixabay.com/photos/auto-automobile-automotive-amg-2179220/">Pixabay</a></li>
                         <li>polishing.webp: <a href="https://www.pexels.com/photo/man-polishing-car-with-device-14615269/">Pexels</a></li>
                         <li>porsche.webp: <a href="https://pixabay.com/photos/porsche-sports-car-luxury-car-6607502/">Pixabay</a></li>
