--- a/project/services.html
+++ b/project/services.html
@@ -19,7 +19,7 @@
         <div class="header-container">
             <div class="logo">
                 <a href="index.html">
-                    <img loading="lazy" src="images/logo.png" alt="Crystal Clear Detail Logo">
+                    <img loading="lazy" src="images/logo.webp" alt="Crystal Clear Detail Logo">
                 </a>
             </div>
             <nav class="main-nav">
